p(1): Add problem statement

--- a/problems/01.tex
+++ b/problems/01.tex
@@ -1,3 +1,10 @@
 \section{Задача № 1}
 
+\begin{enumerate}
+\item Вычислите \(\int_{0}^{\infty} e^{-x^2} \dd x = I\).
+\item Вычислите \(\int_{0}^{\infty} \frac{\cos t}{\sqrt{t}} \dd x = J\).
+\item Нарисуйте графики функций ошибок, интегралов Френеля
+  и их подынтегральных функций
+\end{enumerate}
+
 \subsection{Решение}
