--- a/problems/01.tex
+++ b/problems/01.tex
@@ -5,6 +5,8 @@
 \item Вычислите \(\int_{0}^{\infty} \frac{\cos t}{\sqrt{t}} \dd x = J\).
 \item Нарисуйте графики функций ошибок, интегралов Френеля
   и их подынтегральных функций
+\item Вычислите
+  \(\int_{0}^{\infty} \frac{\sin(3t + \frac{3\pi}{2})}{\sqrt{t}} \dd t = K\)
 \end{enumerate}
 
 \subsection{Решение}
