--- a/problems/01.tex
+++ b/problems/01.tex
@@ -20,7 +20,7 @@
 Перейдём к полярным координатам. \(|J| = \rho\).
 \(\varphi \in [0; \frac{\pi}{2}]\), \(\rho \in [0;+\infty)\).
 Рассматривается только первая четверть, так как и \(x\), и \(y\)
-проходят только положительные значения.
+проходят только неотрицательные значения.
 Тогда
 \[
 \begin{split}
