--- a/ablpreamble.sty
+++ b/ablpreamble.sty
@@ -105,3 +105,9 @@
     separate-uncertainty,
     ]{siunitx}[=v2]                 % Размерности SI
 \sisetup{inter-unit-product = \ensuremath{{}\cdot{}}}
+
+\usepackage{tikz}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usepgfplotslibrary{external}
+\tikzexternalize
