--- a/problems/03.tex
+++ b/problems/03.tex
@@ -56,11 +56,11 @@
     Вычисление:
     \begin{align*}
         \Pi_{0} = \iiint_{V}div\Vec{a}\; dV = \iiint_{V}-3\; dV = -3\iiint_{V}dV =\\= 
-        -3\int_{-1}^{1}dx\int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}dy\int_{-1}^{2 - x^2 - z^2}dz =\\=
-        -3\int_{-1}^{1}dx\int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}3 - x^2 - z^2\; dy =\\=
-        -3\int_{-1}^{1} 3\cdot2\sqrt{1-x^2} - 2x^2\sqrt{1-x^2} - \frac{2}{3}(\sqrt{1-x^2})^3\; dx =\\=
+        -3\int_{-1}^{1}dx\int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}dz\int_{-1}^{2 - x^2 - z^2}dy =\\=
+        -3\int_{-1}^{1}dx\int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}3 - x^2 - z^2\; dz =\\=
+        -3\int_{-1}^{1} 3\cdot2\sqrt{1-x^2} - 2x^2\sqrt{1-x^2} - \frac{2}{3}\left(\sqrt{1-x^2}\right)^3\; dx =\\=
         -3\int_{-1}^{1} \sqrt{1-x^2}\cdot(6 - 2x^2 - \frac{2}{3}(1-x^2))\; dx =\\=
-        -3\int_{-1}^{1} \sqrt{1-x^2}\cdot(\frac{16}{3} - \frac{4}{3}x^2)\; dx =\\=
+        -3\int_{-1}^{1} \sqrt{1-x^2}\cdot\left(\frac{16}{3} - \frac{4}{3}x^2\right)\; dx =\\=
         -4\int_{-1}^{1} \sqrt{1-x^2}\cdot(4 - x^2)\; dx
     \end{align*}
 
@@ -71,7 +71,7 @@
     dx = \cos{t}dt \\ 
     -1 \leq x \leq 1 \longrightarrow \arcsin{(-1)} \leq t \leq \arcsin{(1)} \longrightarrow -\frac{\pi}{2} \leq t \leq \frac{\pi}{2} \\
     \sqrt{1 - x^2} = \sqrt{1 - \sin^2{t}} = \sqrt{\cos^2{t}} = |\cos{t}| = \cos{t} \\
-    \text{(Косинус положительный в допустимых пределах t)}\\
+    \text{(Косинус неотрицательный в допустимых пределах t)}\\
     $
     \begin{align*}
         \Pi_{0} = -4\int_{-1}^{1} \sqrt{1-x^2}\cdot(4 - x^2)\; dx 
@@ -115,9 +115,9 @@
 
     Вычисление:
     \begin{align*}
-        \Pi_{1} = \iint_{S} -\sqrt{2}x\; d\sigma = \iint_{S_{Oxz}} -\sqrt{2}x \sqrt(1 + y_{x}^\prime + y_{z}^\prime)\; dx\;dz
+        \Pi_{1} = \iint_{S} -\sqrt{2}x\; d\sigma = \iint_{S_{Oxz}} -\sqrt{2}x  \sqrt{1 + y_{x}^\prime + y_{z}^\prime}\; dx\;dz
         =\\=
-        \iint_{S_{Oxz}} -\sqrt{2}x \sqrt(1 + 0 + 0)\; dx\;dz = \iint_{S_{Oxz}} -\sqrt{2}x \;dx\;dz 
+        \iint_{S_{Oxz}} -\sqrt{2}x \sqrt{1 + 0 + 0}\; dx\;dz = \iint_{S_{Oxz}} -\sqrt{2}x \;dx\;dz 
         =\\=
         \int_{-1}^{1}dx\int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}} -\sqrt{2}x \;dz 
         =\\=
