p(1): replace / with frac

--- a/problems/01.tex
+++ b/problems/01.tex
@@ -173,7 +173,7 @@
   = \frac{1}{2} \sqrt{\frac{\pi}{2}}
 \]
 
-Вычислим \(\int_{0}^{\infty} \cos(\pi x^2 / 2) \dd x\):
+Вычислим \(\int_{0}^{\infty} \cos\frac{\pi x^2}{2} \dd x\):
 \[
   \int_{0}^{\infty} \cos\left(\frac{\pi x^2}{2}\right) \dd x
   = \sqrt{\frac{2}{\pi}} \int_{0}^{\infty} \cos{\left(\sqrt{\frac{\pi}{2}} x\right)}^2
