--- a/problems/01.tex
+++ b/problems/01.tex
@@ -87,7 +87,8 @@
     x = u^2 e^{-u^2 t} \dd t & \dd y = \sin t \dd t \\
     \dd x = -u^4 e^{-u^2 t} \dd t & y = -\cos t
   \end{bmatrix}
-  = \left.\left(-u^2 e^{-u^2 t} \cos t\right)\right\rvert_{0}^{\infty}
+  = 0
+  + \left.\left(-u^2 e^{-u^2 t} \cos t\right)\right\rvert_{0}^{\infty}
   - u^4 \int_{0}^{\infty} e^{-u^2 t} \cos t \dd t \\
   = u^2 - u^4 \int_{0}^{\infty} e^{-u^2 t} \cos t \dd t
 \end{split}
