--- a/problems/02.tex
+++ b/problems/02.tex
@@ -52,9 +52,10 @@
 
 Изобразим на графике некоторые из них при разных значениях \(A\).
 
-\includegraphics[width=\textwidth]{images/t02_p01.png}
-
-\href{https://www.geogebra.org/calculator/zkyy7zap}{Ссылка на Geogebr'y}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.95\textwidth]{images/t02_p01.png}
+\end{figure}
 
 \bigskip
 
@@ -88,7 +89,10 @@
 
 Изобразим на графике некоторые из них при разных значениях \(B\).
 
-\includegraphics[width=\textwidth]{images/t02_p02.png}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.95\textwidth]{images/t02_p02.png}
+\end{figure}
 
 \bigskip
 
@@ -126,7 +130,10 @@
 \((x_0, y_0)\) равно \(-1\). Это значит, что касательные в этой точке
 перпендикулярны, а значит перпендикулярны и исходные кривые.
 
-\includegraphics[width=\textwidth]{images/t02_p03.png}
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=\textwidth]{images/t02_p03.png}
+\end{figure}
 
 \bigskip
 
@@ -134,10 +141,12 @@
 точки, лежащие на этой линии: \(A(-2, -1)\) и \(B(-1, -2)\). Найдем работу поля
 вдоль этой линии, используя найденный ранее потенциал:
 
-\begin{equation*}\begin{split}
+\begin{equation*}
+  \begin{split}
     W = \Phi \bigg\vert_A^B = \\
     (e^x - e^y) \bigg\vert_{(-2, -1)}^{(-1, -2)} = \\
     (e^{-1} - e^{-2}) - (e^{-2} - e^{-1}) = \\
     2e^{-1} - 2e^{-2} = \\
     \frac{2}{e^2}(e - 1)
-  \end{split}\end{equation*}
+  \end{split}
+\end{equation*}
