p(4): Express operators using nabla

--- a/problems/04.tex
+++ b/problems/04.tex
@@ -10,6 +10,13 @@
 
 \subsection{Решение}
 
+Очевидно, что
+\begin{align*}
+  \Delta &= \laplacian \\
+  \nabla \varphi &= \mathrm{grad} \varphi \\
+  (\nabla, \vec{n}) &= \nabla \cdot \vec{n} = \mathrm{div} \vec{n}
+\end{align*}
+
 \begin{equation}\label{eq:4-og}
   \tag{Формула Гаусса-Остроградского}
   \oiint_{S} \vec{F} \cdot \vec{n_0} \dd s
