misc: add conclusion

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,10 @@
 \import{./problems}{04}
 
 \clearpage
+  \import{./misc}{conclusion}
+\clearpage
+
+\clearpage
   \import{./misc}{score_sheet}
 \clearpage
 
