--- a/misc/conclusion.tex
+++ b/misc/conclusion.tex
@@ -1,5 +1,13 @@
 \section{Вывод}
 В процессе выполнения исследовательской работы мы научились:
-%\begin{enumerate}
-%TODO
-%\end{enumerate}
+\begin{enumerate}
+  \item Вычислять ``неберущиеся'' интегралы.
+  \item Исследовать векторное поле:
+    \begin{itemize}
+      \item определять, является векторное поле потенциальным;
+      \item находить уравнения векторных линий;
+      \item находить потенциал;
+    \end{itemize}
+  \item Искать поток по через поверхность тела
+  \item Применять формулу Остроградского-Гаусса
+\end{enumerate}
