misc: Fix typos and dots

--- a/misc/conclusion.tex
+++ b/misc/conclusion.tex
@@ -6,8 +6,8 @@
     \begin{itemize}
       \item определять, является векторное поле потенциальным;
       \item находить уравнения векторных линий;
-      \item находить потенциал;
+      \item находить потенциал.
     \end{itemize}
-  \item Искать поток по через поверхность тела
-  \item Применять формулу Остроградского-Гаусса
+  \item Искать поток через поверхность тела.
+  \item Применять формулу Остроградского-Гаусса.
 \end{enumerate}
