p(3): Add detailed calculation of integral

--- a/problems/03.tex
+++ b/problems/03.tex
@@ -101,6 +101,8 @@
 \[
   V_2 = \pi \int_{1}^{2} {\left(-\sqrt{-x + 2}\right)}^2 \dd x
   = \pi \int_{1}^{2} (-x + 2) \dd x
+  = -\pi \left. \frac{{(-x + 2)}^2}{2}\right\rvert_{1}^{2}
+  = -\pi \left(0 - \frac{1}{2}\right)
   = \frac{\pi}{2}
 \]
 
