--- a/problems/02.tex
+++ b/problems/02.tex
@@ -6,14 +6,16 @@
   \item Убедитесь, что данное векторное поле потенциально.
   \item Найдите уравнения векторных линий. Изобразите векторные линии на
         рисунке.
-  \item Найдите потенциал поля при помощи криволинейного интеграла.
+  \item \label{itm:02-stmt}
+    Найдите потенциал поля при помощи криволинейного интеграла.
   \item Найдите уравнения линий уровня потенциала (эквипотенциальных линий).
         Изобразите линии уровня потенциала.
   \item Докажите ортогональность найденных векторных линий поля и линий уровня
         потенциала. Проиллюстрируйте ортогональность на графике.
   \item Выберите какую-либо векторную линию поля и зафиксируйте на ней точки
-        \(A\) и \(B\), выбрав для них числовые координаты. Вычислите работу поля
-        вдоль этой линии, используя найденный в п. 3) потенциал.
+        \(A\) и \(B\), выбрав для них числовые координаты.
+        Вычислите работу поля вдоль этой линии,
+        используя найденный в п. \ref{itm:02-stmt} потенциал.
 \end{enumerate}
 
 \subsection{Решение}
