--- a/problems/02.tex
+++ b/problems/02.tex
@@ -56,7 +56,8 @@
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.95\textwidth]{images/t02_p01.png}
+  \asyinclude{asy/02-01.asy}
+  \caption{Векторные линии}
 \end{figure}
 
 \bigskip
@@ -93,7 +94,8 @@
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.95\textwidth]{images/t02_p02.png}
+  \asyinclude{asy/02-02.asy}
+  \caption{Линии уровня потенциала}
 \end{figure}
 
 \bigskip
@@ -134,7 +136,7 @@
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=\textwidth]{images/t02_p03.png}
+  \asyinclude{asy/02-03.asy}
 \end{figure}
 
 \bigskip
