--- a/problems/03.tex
+++ b/problems/03.tex
@@ -1,12 +1,12 @@
 \section{Задача № 3}
 
+\begin{wrapfigure}{r}[0pt]{0.3\textwidth}
+  \centering
+  \asyinclude{asy/03-01.asy}
+\end{wrapfigure}
+
 Дано тело \(T\), ограниченное следующими поверхностями:
 \( y + \sqrt{x^2 + z^2} = 0, x^2 + z^2 = 1, x^2 + y + z^2 = 2\).
-
-\begin{figure}[!htbp]
-  \centering
-  \includegraphics[scale=0.5]{images/Input_task3.png}
-\end{figure}
 
 \begin{enumerate}
   \item Изобразите тело \(T\) на графике в пространстве.
@@ -24,7 +24,7 @@
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[scale = 0.5]{images/Math_RW4_task3.png}
+  \asyinclude{asy/03-02.asy}
   \caption{Тело \(T\) в пространстве}
 \end{figure}
 
